--- a/eats/templates/eats/results.html
+++ b/eats/templates/eats/results.html
@@ -11,19 +11,33 @@
     float: right;
     background-color: #9939beb6;
 }
+.carousel-item {
+height: 400px;
+overflow: hidden;
+width: 100%;
+}
+.carousel-item img {
+width: 100%;
+}
+li {
+    background-color: white;
+}
+.menu-item-price-amount {
+    float: right;
+}
 </style>
 
 
 <div class="center">
     <div class="carousel-container">
         {% if photos is not None %}
-        <div id="photos" class="carousel slide" data-ride="carousel">
+        <div id="photocar" class="carousel slide" data-ride="carousel">
             <ul class="carousel-indicators">
                 {% for photo in photos %}
                     {% if forloop.first %}
-                        <li data-target="#photos" data-slide-to="0" class="active"></li>
+                        <li data-target="#photocar" data-slide-to="0" class="active"></li>
                     {% else %}
-                        <li data-target="#photos" data-slide-to="{{ forloop.counter0 }}"></li>
+                        <li data-target="#photocar" data-slide-to="{{ forloop.counter0 }}"></li>
                     {% endif %}
                 {% endfor %}
             </ul>
@@ -32,33 +46,34 @@
                 {% for photo in photos %}
                 {% if forloop.first %}
                 <div class="carousel-item active">
-                    <img src="{{ photo.url }}" style="width: 100%;">
+                    <img src="{{ photo.url }}" style="height:100%;width: 100%;">
                 </div>
                 {% else %}
                 <div class="carousel-item">
-                    <img src="{{ photo.url }}" style="width: 100%;">
+                    <img src="{{ photo.url }}" style="height:100%;width: 100%;">
                 </div>
                 {% endif %}
                 {% endfor %}
             </div>
 
-            <a class="carousel-control-prev" href="#photos" data-slide="prev">
+            <a class="carousel-control-prev" href="#photocar" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </a>
-            <a class="carousel-control-next" href="#photos" data-slide="next">
+            <a class="carousel-control-next" href="#photocar" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
         </div>
         {% endif %}
     </div>
     <div class="results">
-        <h1>
-            {{ name }}
+        <h1 >
+            <a href="{{ website }}">
+                <strong>{{ name }}</strong>  
+            </a>
+            <h3>
+                {{ phone }}
+            </h3>
         </h1>
-        <h3>
-            {{ phone }}
-        </h3>
-
     </div>
 
     <div class="mapouter">
@@ -82,6 +97,14 @@
                 width: 600px;
             }
         </style>
+    </div>
+
+    <div class="menu">
+        {% if menu is None %}
+            <p>No menu for this restaurant could be found :(</p>
+        {% else %}
+            {% include "yelp_menu.html" %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
